# zpl-studio

./: .gitignore  ANDROID_PLAN.md  ANDROID_STATUS.md  Cargo.toml  LINUX_NOTES.md  README.md  project-brief.md
.github/workflows/: build.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/zplprinter/: MainActivity.kt
android/app/src/main/java/com/zplprinter/ui/: EditScreen.kt  UseScreen.kt
android/app/src/main/java/com/zplprinter/utils/: TemplateStorage.kt  ZebraPrinter.kt  ZplParser.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml
assets/: LOGO_INSTRUCTIONS.txt
docs/: ARCHITECTURE.md  wireframe.html  wireframe.md
examples/: README.md  simple_name_tag.zpl
scripts/: img_to_zpl.py  zpl-printer.desktop
src/: app.rs  main.rs
src/canvas/: mod.rs  zpl_gen.rs
src/persistence/: file_ops.rs  mod.rs
src/preview/: labelary.rs  mod.rs
src/printer/: cups.rs  mod.rs  types.rs  windows.rs
src/ui/: clipart_data.rs  design_mode.rs  edit_mode.rs  load_mode.rs  mod.rs
src/zpl/: mod.rs  template.rs
